[tool.poetry]
name = "oauth2_local_fetch"
version = "0.1.0"
description = ""
authors = ["Yusuke Ohshima <k.ohshima.yusuke2@mind.co.jp>"]
license = "UNLICENSE"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
oauthlib = "^3.1.0"
requests-oauthlib = "^1.3.0"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
demo = "oauth2_local_fetch.demo:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
