[tool.poetry]
name = "fetch_token_server"
version = "0.1.0"
description = ""
authors = ["Yusuke Ohshima <k.ohshima.yusuke2@mind.co.jp>"]
license = "UNLICENSE"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
